@@ -14,15 +14,25 @@ It runs on a local server which handles 2 players and sets the game state.
 
 ``git clone https://github.com/PaulKatigbak/GroupAssignment.git``
 
-2. To run the application, you must use an IDE such as IntelliJ
-3. Open the project folder in your IDE
-4. Make sure to configure JavaFX libraries and VM options
-5. Add Main.java as a runnable application
-6. Add Server.java as a runnable application
-7. Go to configuration settings and allow 'run multiple instances' under modify option.
-8. You can now run the server by pressing the run or play button once
-9. Run Main twice to open to UI windows.
-10. Test the application by searching a match 
+1. Open IntelliJ
+2. Go to File>Open>Cloned project
+3. Go to File>Project Structure>Project, ensure you're on Java 15 or newer (We used version 15.0.2)
+4. Go to File>Project Structure>Libraries>plus button, Add in your javafx library sdk (We used 15.0.1)
+5. Press Apply and Ok
+6. Go to Run>Edit Configuration
+7. Press the plus on the top left
+8. Click on application
+9. Click on Modify Options dropdown and hit "Add VM Options"
+10. Add VM options like so: '--module-path "PATH TO JAVAFX LIBRARY" --add-modules javafx.controls,javafx.fxml'
+    (Change the PATH)
+11. Make sure the Main class is set to sample.Main
+12. Go to configuration settings and allow 'run multiple instances' under modify option. (ONLY FOR MAIN)
+
+13. Hit Apply
+14. Do step 7 to 11 again but this time Main class is sample.Server
+15. Hit Apply and OK
+16. You can now run the server by pressing the run or play button once
+17. Run Main twice to open to UI windows.
 
 
 
